# fwtrash

./: .gitignore  .lok.conf  HISTORY.md  PLAN.md  README.md  allowedips.txt  bugs.txt  current_task.txt  func_load.py  functions.py  fw.sh  fwclear.sh  fwclearbadips.sh  fwtrash.py  fwtrash.sh  gitp  modules.ssh.opts  modules.tcpdump.opts  modules.vsftp.opts  ps.out  readme.txt  run_http.sh  run_ssh.sh  run_tcpdump.sh  run_vsftp.sh  runwhile_http.sh  runwhile_ssh.sh  state.aiia  undrop.sh
.lok.d/: fwtrash.conf
modules/: http.py  ssh.py  tcpdump.py  vsftp.py
plans/: 1783916439.8946526.json  1783917261.9269545.json  1783918743.85769.json
rules/: http.rules  ssh.rules  vsftp.rules
test/: error_date.py  error_date.sh  extract_log1.py
v2/: .gitignore  Dockerfile  MIGRATION.md  Makefile  README.md  docker-compose.yml  fwtrash-legacy  pyproject.toml
v2/.github/workflows/: ci.yml
v2/docs/: plugin-development.md  rules-schema.md
v2/src/fwtrash/: __init__.py
v2/src/fwtrash/api/: __init__.py  server.py
v2/src/fwtrash/cli/: __init__.py  main.py
v2/src/fwtrash/core/: __init__.py  blocking.py  models.py
v2/src/fwtrash/engine/: __init__.py  backends.py  output.py  pipeline.py
v2/src/fwtrash/parsers/: __init__.py  base.py  http.py  ssh.py
v2/src/fwtrash/rules/: __init__.py  conditions.py  engine.py
v2/tests/: __init__.py  conftest.py
v2/tests/integration/: test_parser_integration.py  test_pipeline.py  test_regression.py
v2/tests/unit/: test_blocking.py  test_conditions.py  test_models.py  test_parsers.py  test_rule_engine.py
