[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fwtrash"
version = "2.0.0"
description = "Modern security log analyzer with real-time blocking capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FWTrash Contributors", email = "dev@grandekos.com"}
]
keywords = ["security", "firewall", "log-analysis", "intrusion-detection", "iptables"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "watchdog>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
dashboard = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "websockets>=12.0",
    "jinja2>=3.1",
]

[project.scripts]
fwtrash = "fwtrash.cli.main:app"
fwtrash-v2 = "fwtrash.cli.main:app"

[project.urls]
Homepage = "https://github.com/grandekos/fwtrash"
Documentation = "https://fwtrash.readthedocs.io"
Repository = "https://github.com/grandekos/fwtrash.git"
Issues = "https://github.com/grandekos/fwtrash/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fwtrash"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "ARG", "N802"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/fwtrash"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
